--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
+    dataBinding.enabled = true
     defaultConfig {
         applicationId "com.prakasit.a59050083.assignment4"
         minSdkVersion 26
