--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,19 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:1.4.0-beta1"
+        classpath "com.android.databinding:dataBinder:1.0-rc1"
+    }
+}
+
+allprojects {
+    repositories {
+        jcenter()
+    }
+}
